# share/usecases/api.ts
@@ -14,6 +14,7 @@ export const api = {
       sendmail: "/api/v1/submission/sendmail",
       vc: "/api/v1/submission/vc",
     },
+    logout: "/api/v1/logout",
     user_badgelist: "/api/v1/user_badgelist",
   },
 };
